<resources>
    <string name="app_version" translatable="false">1.1</string>

    <string name="app_name">Avalon schedule</string>
    <string name="title_last_update_date">Last check:</string>
    <string name="settings_activity_title">Settings</string>
    <string name="changes_activity_title">Changes</string>
    <string name="about_activity_title">About</string>

    <string name="menu_go_to_today">Today</string>
    <string name="menu_update">Update</string>
    <string name="menu_changes">Changes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="menu_clear_changes">Clear</string>

    <string name="task_loading_in_process">Loading…</string>
    <string name="task_loading_finished">Loading has been finished</string>
    <string name="task_loading_failed">Loading has been failed</string>
    <string name="several_tries_failed_error_message">Error. %s hours since last schedule update</string>

    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="save_button_text">Save</string>

    <string name="url_caption" translatable="false">URL</string>
    <string name="url_input_invitation" translatable="false">http://...</string>
    <string name="url_saved">URL saved</string>
    <string name="url_is_empty">URL is empty</string>

    <string name="autoupdate_service_caption">Autoupdate every hour</string>
    <string name="status_caption">Status:</string>
    <string name="status_disabled">disabled</string>
    <string name="status_enabled">enabled</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>

    <string name="on_schedule_changed_notification">Schedule had been changed</string>
    <string name="on_schedule_no_changes_notification">No changes</string>
    <string name="on_boot_notification">Schedule autoupdater has been started</string>

    <string name="deleted_records_caption">Deleted records</string>
    <string name="added_records_caption">Added records</string>

    <string name="about_author_caption">Author:</string>
    <string name="about_author">Prikhodko Evgeny</string>
    <string name="about_email_caption" translatable="false">Email:</string>
    <string name="about_email" translatable="false">binary.machinery@gmail.com</string>
    <string name="about_source_code_caption">Source code:</string>
    <string name="about_source_code" translatable="false">https://github.com/Fck-r-sns/AvalonSchedule</string>
    <string name="about_icon_caption">Icon:</string>
    <string name="about_icon" translatable="false">YMB Properties ( http://ymbproperties.com/ )</string>

    <string name="ok_button_text">OK</string>

    <string name="no_study_today">No study</string>

    <string-array name="weekdays" translatable="false">
        <item>Воскресение</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string name="exam_type" translatable="false">Экзамен</string>

</resources>