<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineSeparatorColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_author_caption"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_caption_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_author"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_value_size" />

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineSeparatorColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_email_caption"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_caption_size" />

    <TextView
        android:autoLink="email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_email"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_value_size" />

    <View
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/lineSeparatorColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_source_code_caption"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_caption_size" />

    <TextView
        android:autoLink="web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_source_code"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_value_size" />

    <View
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineSeparatorColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_icon_caption"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_caption_size" />

    <TextView
        android:autoLink="web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_field_horizontal_margin"
        android:layout_marginStart="@dimen/about_field_horizontal_margin"
        android:text="@string/about_icon"
        android:textColor="@color/colorTextAbout"
        android:textSize="@dimen/about_value_size" />

</LinearLayout>
